--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,5 +40,6 @@ models:
     # Applies to all files under models/example/
     mart:
       +materialized: table
-      finance: 
-        +schema: dbt_prod_finance
+      finance:
+        +schema: finance
+
